karnc/tests/fixtures/positive/185_adapter_given_workers/src/auth/sessions.karn
context auth.sessions

consumes tokens { Jwt }

service login {
  on call(sub: String) -> Effect[String] given Jwt {
    let token <- Jwt.sign(sub)
    token
  }
}
