karnc/tests/fixtures/negative/147_adapter_given_unknown_cap/src/tokens.karn
adapter tokens {
  binding "./tokens.binding.ts"

  exports capability { Jwt }

  capability Jwt {
    fn verify(token: String) -> Effect[String]
  }

  provides Jwt = JwksJwt given Fetch
}
